--- a/NOTEBOOKS/2_Interest_rates_basics.ipynb
+++ b/NOTEBOOKS/2_Interest_rates_basics.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mdakkon/QuantMethodsFinance/blob/main/NOTEBOOKS/2_Interest_rates_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "4s1YpUWOVwah"
       },
       "source": [
@@ -24,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "_2tV2dMFVwam"
       },
@@ -54,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "QZ506rN2Vwap"
       },
@@ -80,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "M53sVba0Vwap"
       },
@@ -113,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "6aPaxSENVwaq"
       },
@@ -146,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "KYH-bkQIVwar"
       },
@@ -168,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "qI9RVUvjVwar"
       },
@@ -182,8 +192,11 @@
         "    SEMI_ANNUAL = 2\n",
         "    ANUAL = 3\n",
         "\n",
-        "\n",
+        "#TTM : time to maturity\n",
         "def bond_price(TTM, coupon, yield_to_mat, freq):\n",
+        "  \"\"\"\n",
+        "  calculetes the bond price given the parameters\n",
+        "  \"\"\"\n",
         "\n",
         "    if freq == freq_options.QUARTERLY:\n",
         "          delta = 0.25\n",
@@ -201,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "jra-V5D0Vwar",
         "outputId": "0113121d-34e8-4512-9f89-3c0f14a2b4c3",
@@ -233,6 +246,15 @@
       "source": [
         "For a 5 year maturity bond, with annual coupons of $3\\%$, plot the dirty price as a function of its yield. If the yield of a bond rises, does the bond holder gain or loose money?"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qaiy6m6-MuSq"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -306,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "OP5q0d7QVwas",
         "outputId": "eacbbd58-f140-4bd2-de22-24ca3831f86d",
@@ -345,7 +367,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -372,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "1XSlKF5uVwas"
       },
@@ -461,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "LltIbml1Vwat"
       },
@@ -481,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "KW6V0sZOVwat"
       },
@@ -576,7 +598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "EPhPjEM1Vwau"
       },
@@ -598,7 +620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "PWLqE7nOVwau",
         "outputId": "9b44ad97-37e0-4745-db08-cdd99ce937ab",
@@ -637,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "R8hpD9pFVwau"
       },
@@ -712,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "jHWkQwzjVway"
       },
@@ -763,7 +785,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "xQX5UoXyVwaz"
       },
@@ -789,7 +811,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -830,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "1DRJiZs9Vwaz"
       },
@@ -878,7 +900,7 @@
       "metadata": {
         "id": "fpHZ4tGHjdag"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -889,7 +911,7 @@
       "metadata": {
         "id": "75ptb8vnkZAA"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -927,7 +949,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "V9J4DNWjVwaz"
       },
@@ -947,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "ggwt48F9Vwaz"
       },
@@ -1030,13 +1052,12 @@
         "\n",
         "    payment_times = np.arange(TTM,0, step=-delta)[::-1]\n",
         "\n",
-        "    # your code here\n",
-        ""
+        "    # your code here\n"
       ],
       "metadata": {
         "id": "qGh5sAfx8xmG"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1056,7 +1077,7 @@
       "metadata": {
         "id": "FjifAczD3STs"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1088,7 +1109,8 @@
       "version": "3.10.13"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
